<resources>
    <string name="app_name">Мои фильмы</string>

    <string name="search_hint">Введите название</string>

    <string name="main_title">Что будете смотреть\nсегодня?</string>
    <string name="recommended">Рекомендуем</string>
    <string name="popular">Популярные</string>
    <string name="upcoming">Новинки</string>

    <string name="home">Главная</string>

    <string name="more">Ещё…</string>
    <string name="tv_shows">Сериалы</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="later">44\n Буду смотреть</string>

    <string name="tv_show">Телесериалы</string>
    <string name="close">закрыть</string>
    <string name="year_unknown">Год неизвестен</string>

    <string-array name="tab_titles">
        <item>23\n Понравилось</item>
        <item>@string/later</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">Пёс Киноман</string>
    <string name="title_aquamen_tv">Aquamen</string>
    <string name="title_watch_btn">Смотреть</string>
    <string name="desc_cinema_tv">In 1985 Maine, lighthouse keeper Thomas Curry rescues Atlanna, the queen of the underwater kingdom of Atlantis, during a storm. They fall in love and have a son named Arthur, who has the power to communicate with sea creatures.</string>
    <string name="name_first_actor">Jason Mamoa</string>
    <string name="name_second_actor">Amber Heard</string>
    <string name="forth_name_actor">Nicole Kidman</string>
    <string name="third_name_actor">Patrik Wilson</string>
    <string name="studio_tv">Студия</string>
    <string name="genre_tv">Жанр</string>
    <string name="year_tv">Год</string>
    <string name="name_studio_tv">Warner Bros</string>
    <string name="value_genre_tv">Action, Adventure, Fantasy</string>
    <string name="value_year_tv">2018</string>
    <string name="we_find">Мы нашли для вас</string>
    <string name="we_dont_find">Мы ничего не нашли для вас</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>
